# crypto_wallet

./: .gitignore  Dockerfile  Makefile  alembic.ini  asyncapi_docs.yaml  conftest.py  docker-compose.yml  dump.rdb  init_script.py  pyproject.toml  pytest.ini
asyncapi/: generator.py  html_fixer.py
config/: settings.py
config_celery/: celery_config.py
config_fastapi/: app.py  config_fastapi.py  routers.py  socketio_manager.py  sqladmin_views_routes.py
config_socketio/: config_socketio.py  config_socketio_client.py  consumers.py
migrations/: env.py  script.py.mako
migrations/versions/: 05c24d130b7f_.py  0928a62ae6c8_.py  13e0a0e64aef_.py  16505dab3f9e_.py  1a44de0efd06_.py  1ee3ebe78b79_.py  212da596c9a5_.py  254cbae1d11e_.py  292f66dd6c1d_.py  3366bbacebce_.py  36a9e7563001_.py  37f82103e6c7_.py  3b0430396f8d_.py  4317ed2eb3ff_.py  4899804aeb27_.py  4f352933c403_.py  568a0cbd9e2a_.py  57e3b47a1584_.py  58ad67378235_.py  5a40607a0a2b_.py  5d0a378088a5_.py  5d9462ef494d_.py  5e5f1418aff9_.py  5ecb1e9a4cec_.py  664de079a403_.py  6e3e54bce19f_.py  6f7b121d1b4a_.py  78bd4b477d45_.py  796dee04436a_.py  79c8ad9a9e59_.py  8bb46a3c6448_.py  8ce0cf4efce0_.py  8e97cee3063a_.py  95a67b9075df_.py  9614e99803a6_.py  9ec3aa96e5f8_.py  a3269506671f_.py  a33786f10610_.py  a44da2e03e3f_.py  a5db3c9062db_.py  (+24 more)
nginx/: nginx.conf
src/api/: containers.py  moralis_api.py  web3_api.py
src/auth/: containers.py  schemas.py  views.py
src/auth/dependencies/: jwt_auth.py
src/auth/endpoints/: auth.py
src/auth/repositories/: repository.py
src/auth/services/: auth.py
src/auth/tests/: test_login.py  test_logout.py  (+2 more)
src/base/: base.py
src/boto3/: consumers.py  containers.py
src/celery/: user_tasks.py
src/chat/: containers.py  models.py  schemas.py  views.py
src/core/: containers.py  database.py  register.py
src/delivery/: consumers.py  containers.py  google_request.py  models.py
src/ibay/: consumers.py  containers.py  enums.py  models.py  schemas.py  views.py
src/moralis/: consumers.py  containers.py  moralis_api.py
src/parser/: consumers.py  containers.py  parser.py  tasks.py
src/sqladmin/: auth.py
src/users/: app.py  consumers.py  containers.py  models.py  schemas.py  tasks.py  views.py
src/wallet/: consumers.py  containers.py  enums.py  models.py  schemas.py  views.py
src/web3/: consumers.py  containers.py  web3_api.py
templates/: chat.html  ibay.html  index.html  index2.html  login.html  profile.html  register.html  user_login.html  wallets.html
templates/asyncapi_docs/: index.html
(+53 files in other folders)
