[tool.poetry]
name = "crypto-wallet"
version = "0.1.0"
description = ""
authors = ["Viktor1385 <viktor13851998@gmail.com>"]
readme = "README.md"
packages = [{include = "crypto_wallet"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
dependency-injector = {extras = ["yaml"], version = "^4.41.0"}
sqlalchemy = "^2.0.19"
python-environ = "^0.4.54"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.6"
sqlalchemy-utils = "^0.41.1"
email-validator = "^2.0.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
