[tool.poetry]
name = "crypto-wallet"
version = "0.1.0"
description = ""
authors = ["Viktor1385 <viktor13851998@gmail.com>"]
readme = "README.md"
packages = [{include = "crypto_wallet"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
dependency-injector = {extras = ["yaml"], version = "^4.41.0"}
sqlalchemy = "^2.0.19"
python-environ = "^0.4.54"
passlib = "^1.7.4"
sqlalchemy-utils = "^0.41.1"
email-validator = "^2.0.0.post2"
pyjwt = "^2.8.0"
fastapi-mail = "^1.4.1"
jinja2 = "^3.1.2"
rabbitmq = "^0.2.0"
propan = {extras = ["async-rabbit"], version = "^0.1.5.17"}
redis = {extras = ["async"], version = "^4.6.0"}
asgiref = "^3.7.2"
web3 = "^6.8.0"
celery = "^5.3.1"
httpx = "^0.24.1"
asyncpg = "^0.28.0"
python-socketio = "^5.8.0"
alembic = "^1.11.2"
boto3 = "^1.28.26"
pillow = "^10.0.0"
python-multipart = "^0.0.6"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
